# Mocapy

./: .gitignore  LICENSE  README.md  SETUP.md  environment.yml  pyproject.toml  retarget_to_mixamo.py
mocapy/: __init__.py  _paths.py  cli.py  pipeline.py
mocapy/_data/: __init__.py  default_skeleton.json
mocapy/detect/: __init__.py  bridge.py  filters.py  mediapipe_detect.py  preview.py
mocapy/export/: __init__.py  bvh.py  morphs.py
mocapy/solve/: __init__.py  arms.py  blend.py  ccd_ik.py  eyes.py  face_morphs.py  fingers.py  head.py  legs.py  root.py  three_math.py  torso.py  wrist.py
mocapy/vrm/: __init__.py  skeleton.py
node_bridge/: detect.js  detect_browser.html  package-lock.json  package.json
tools/: make_demo_gif.py  mocapy_blender_addon.py  mocapy_blender_daemon.py  webcam_record.py
validation/: detect_dump.py  solve_bvh.py  test_bvh_math.py  test_three_math.py  validate_face.py  validate_fingers.py  validate_hierarchy.py  validate_morphs.py  validate_motion.py  validate_pipeline.py  validate_solver_arm.py  validate_solver_center.py  validate_solver_leg.py  validate_solver_torso.py  validate_wrist.py
